--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "incode-language",
   "version": "1.0.0",
   "description": "The InCode Programming Language",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --project ."
   },
   "repository": {
     "type": "git",
