--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "sourceMap": true,
       "rootDir": "src",
       "outDir": "dist",
-      "allowJs": true
+      "allowJs": true,
+      "declaration": true
     },
     "exclude": [
       "node_modules"
