--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "incode-language",
+  "name": "@incodelang/language",
   "version": "1.0.11",
   "description": "The InCode Programming Language",
   "main": "dist/incode.js",
