--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@incodelang/language",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "The InCode Programming Language",
   "main": "dist/incode.js",
   "typings": "src/index.d.ts",
   "bin": "",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc --project ."
   },
